<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/income_layout"
              android:background="@drawable/white"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" 
              android:paddingTop="5px">

	<TableRow>              
	    <TextView android:id="@+id/income_create_date_textview"
	              android:text="@string/income_create_date_textview"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"/>
	    <Button android:id="@+id/income_create_date_button" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_width="fill_parent" 
	    		 android:gravity="center"/>
	</TableRow>              
    
	<TableRow>              
	    <TextView android:id="@+id/income_amount_textview"
	              android:text="@string/income_amount_textview"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content" 
	              android:minWidth="80px"/>
	    <EditText android:id="@+id/income_amount_edittext" 
	  			 android:layout_width="wrap_content" 
	  			 android:layout_height="wrap_content" 
	  			 android:minWidth="220px"
	  			 android:inputType="number"/>
	</TableRow>              

	<TableRow>              
	    <TextView android:id="@+id/income_descr_textview"
	              android:text="@string/income_descr_textview"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content" android:minWidth="80px"/>
	    <EditText android:id="@+id/income_descr_edittext" 
	  			 android:layout_width="wrap_content" 
	  			 android:layout_height="wrap_content" android:minWidth="220px"/>
	</TableRow>              

	<Button android:id="@+id/income_save_button"
			android:text="@string/income_save_button" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
</TableLayout>
