<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/recent_layout"
              android:background="@drawable/white"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical">

	<TableRow>              
	    <TextView android:id="@+id/recent_income_textview"
	              android:text="@string/recent_income_textview"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"/>
	    <Spinner android:id="@+id/recent_income_spinner" 
	    		 android:layout_width="wrap_content" 
	    		 android:layout_height="wrap_content" />
	</TableRow>              
    
	<TableRow>              
	    <TextView android:id="@+id/recent_expense_textview"
	              android:text="@string/recent_expense_textview"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"/>
	    <Spinner android:id="@+id/recent_expense_spinner" 
	  			 android:layout_width="wrap_content" 
	  			 android:layout_height="wrap_content" />
	</TableRow>              

	<Button android:id="@+id/recent_search_button"
			android:text="@string/recent_search_button" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
</TableLayout>

